Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22014

Rowid Filtering is not displayed well in the optimizer trace

    XMLWordPrintable

Details

    Description

      Optimizer trace doesn't show much information about Rowid Filtering. The only thing one can see is the chosen ref access method in best_access_path:

      +                  "chosen_access_method": {
      +                    "type": "ref",
      +                    "records": 138,
      +                    "cost": 91,
      +                    "uses_join_buffering": false,
      +                    "filter_used": true
      +                  }
      

      Note that if one looks above, it is not even shown for the considered methods:

      +                    {
      +                      "access_type": "ref",
      +                      "index": "ux_pk1_fd5",
      +                      "used_range_estimates": true,
      +                      "rows": 138,
      +                      "cost": 91,
      +                      "chosen": true
      +                    },
      

      This task is about fixing this.

      Attachments

        Activity

          People

            psergei Sergei Petrunia
            psergei Sergei Petrunia
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.