MDEV-22014: Rowid Filtering is not displayed well in the optimizer trace

- Print the rowid filters that are available for use with each table.
- Make print_best_access_for_table() print which filter it has picked.
- Make best_access_path() print the filter for considered ref accesses.